Source/WebCore: [Qt] Be smarter with tile usages during tiling https://bugs.webkit.org/show_bug.cgi?id=78243

Patch by Kenneth Rohde Christiansen <kenneth@webkit.org> on 2012-02-15
Reviewed by Simon Hausmann.

The keep rect used to know what existing tiles to keep around, is now a
padding (in tile dimensions) around the usual cover rect. With usual,
I mean to point out that we take our panning optimization into account.

We also do a good effort at keeping the amount of tiles steady, by not
simply intersecting our areas with the contentRect, but moving it
first into legal bounds and then expanding in opposite direction to
cover a similar amount of pixels.

In the future the cover area should be calculated given available
system memory.

* platform/graphics/TiledBackingStore.cpp:
(WebCore):
(WebCore::TiledBackingStore::TiledBackingStore):
(WebCore::TiledBackingStore::createTiles):
(WebCore::TiledBackingStore::adjustForContentsRect):
(WebCore::TiledBackingStore::computeCoverAndKeepRect):
(WebCore::TiledBackingStore::tileRectForCoordinate):
* platform/graphics/TiledBackingStore.h:
(TiledBackingStore):

Source/WebKit/qt: [Qt] Be smarted with tile usages during tiling
https://bugs.webkit.org/show_bug.cgi?id=78243

Patch by Kenneth Rohde Christiansen <kenneth@webkit.org> on 2012-02-15
Reviewed by Simon Hausmann.

Remove internal API used by Symbian.

* Api/qwebpage.cpp:
(QWebPagePrivate::dynamicPropertyChangeEvent):

Canonical link: https://commits.webkit.org/95645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107803 268f45cc-cd09-0410-ab3c-d52691b4dbfc